tests/baselines/reference/parserInterfaceDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration1.ts (4 errors) ====
    interface I extends A extends B {
                          ~~~~~~~
!!! error TS1005: '{' expected.
                                    ~
!!! error TS1005: ';' expected.
                        ~
!!! error TS2304: Cannot find name 'A'.
                                  ~
!!! error TS2304: Cannot find name 'B'.
    }